fixed the wrk page so large white space is minimal

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -61,8 +61,8 @@
 }
 
 .gallery {
-	@include flex-center;
-	flex-wrap: wrap;
+	display: flex;
+	// flex-wrap: wrap;
 	padding: 0 4px;
 	.column {
 		flex: 33.333%;
